# Imperative-Calisthenics

./: CMakeLists.txt  rules.json  workflow.json
